k8s/ispydvr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ispyagentdvr
  namespace: dvr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ispyagentdvr
  template:
    metadata:
      labels:
        app: ispyagentdvr
    spec:
      priorityClassName: "high"
      hostNetwork: true  # Required for UDP port ranges
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: ispyagentdvr
        image: mekayelanik/ispyagentdvr:6.3.3.0-21042025
        ports:
        - containerPort: 8090
        - containerPort: 3478 
        volumeMounts:
        - name: config-volume
          mountPath: /AgentDVR/Media/XML
        - name: media-volume
          mountPath: /AgentDVR/Media/WebServerRoot/Media
        resources:
          requests:
            cpu: 1.5
            memory: 512Mi
        readinessProbe:
          httpGet:
            path: /
            port: 8090
          initialDelaySeconds: 30
          periodSeconds: 10
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: ispyagentdvr-config-pvc
      - name: media-volume
        nfs:
          server: 192.168.2.254
          path:  /mnt/tank/dvr
