k8s/ispydvr/telegrambot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtttelegram
  namespace: dvr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mqtttelegram
  template:
    metadata:
      labels:
        app: mqtttelegram
    spec:
      containers:
        - name: mqtttelegram
          image: pharndt/mqtttelegram:1.0.4
          volumeMounts:
            - name: generated-config
              mountPath: /var/lib/mqtttelegram
      restartPolicy: Always
      volumes:
        - name: config-template
          configMap:
            name: mqtttelegram-config
        - name: generated-config
          emptyDir: {}
