k8s/ispydvr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dvr-ingress
  namespace: dvr
spec:
  ingressClassName: traefik
  rules:
  - host: dvr.local.koryalbert.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ispyagentdvr
            port:
              number: 8090
